@@ -1,6 +1,7 @@
 <pre>
 2007-XX-XX:
 	* version 0.5.3
+	* added new :mkvimperatorc command
 	* remove :redraw and Ctrl-L commands as they rely on FF3 features
 	* :ls, :history and :bmarks output is now hyperlinked
 	* new gb and gB mappings to repeat the last :buffer[!] command,
@@ -33,7 +34,7 @@
 	* added 'visualbellstyle' for styling/hiding the visual bell
 	* merge the existing status bar with the standard FF status bar so that
 	  security information and extension buttons are included
-  	* :buffer partial_string works now as in vim, and with ! even better
+	* :buffer partial_string works now as in vim, and with ! even better
 	* new :time command for profiling
 	* added new :sidebar and :sbclose commands
 	* added 'more' and standard more-prompt key mappings to control
